# py-aws-core

./: .coveragerc  .gitignore  codecov.yml  pyproject.toml
.github/workflow/: dev-pr.yml  dev.yml  production.yml
.github/workflows/: dev-pr.yml  dev.yml  production.yml
.run/: Python tests for test_decorators.HttpStatusCheckTests.run.xml  Python tests for test_utils.BuildLambdaResponseTests.test_headers.run.xml  Python tests for tests.test_decorators.LambdaResponseHandlerTests.test_catch_all_exception.run.xml  Unittests in py-aws-core.run.xml  Unittests in tests.run.xml
py_aws_core/: boto_clients.py  clients.py  cognito.py  cognito_api.py  cookies.py  database.py  db_api.py  db_dynamo.py  db_service.py  db_session.py  decorators.py  dynamodb.py  dynamodb_api.py  dynamodb_service.py  encoders.py  entities.py  events.py  exceptions.py  interfaces.py  logs.py  router.py  secrets_manager.py  services.py  session_service.py  utils.py
py_aws_core/spoofing/: backends.py  exceptions.py  proxy_interface.py  proxyrack_api.py
spoofing/: backends.py
spoofing/proxyrack/: backends.py  const.py  exceptions.py  proxyrack_api.py  utils.py
spoofing/twocaptcha/: backends.py  db.py  (+1 more)
tests/: TEST_VAL_1  const.py  test_client_session_service.py  test_clients.py  test_cognito.py  test_cookies.py  test_db_dynamo.py  test_db_session.py  test_decorators.py  test_dynamodb.py  test_dynamodb_api.py  test_encoders.py  test_events.py  test_exceptions.py  test_routers.py  test_secrets_manager.py  test_services.py  test_session_service.py  test_ssm_parameter_store.py  test_utils.py
(+34 files in other folders)
