[tool.poetry]
name = "py-aws-core"
version = "0.1.0"
description = ""
authors = ["services <services@rydeas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "~1.34.59"
python = "~3.12"
python-dotenv = "~1.0.1"
pyjwt = "~2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
