[tool.poetry]
name = "py-aws-core"
version = "0.1.0"
description = ""
authors = ["services <services@rydeas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "~1.34"
coverage = "~7.5"
python = "~3.12"
python-dotenv = "~1.0"
pyjwt = "~2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
